authorization doc up